--- a/your_content/comic_info.ini
+++ b/your_content/comic_info.ini
@@ -1,15 +1,16 @@
 [Comic Info]
-Comic name = Tamberlane
-Author = Caytlin Vilbrandt
-Description = This is a comic about a girl who knows a lot of animals.
+Comic name = Work Chronicles перевод
+Author = https://workchronicles.substack.com/about
+Description = Work Chronicles это веб комикс, демонстрирующий радости и разочированмя на рабочем месте
 
 [Comic Settings]
 Date format = %B %d, %Y
-Timezone = US/Pacific
+Timezone = Europe/Moscow
 Use images in navigation bar = False
+Use https when building comic URL = True
 
 [Pages]
-index = Welcome to comic_git!
+index = Welcome to Inkwell GT!
 latest =
 archive = Archive
 tagged = Tagged Posts
@@ -20,14 +21,13 @@ infinite_scroll = Infinite Scroll
 Home = /
 Archive = /archive/
 Infinite Scroll = /infinite_scroll/
-Shop = https://shop.tamberlanecomic.com/
-Patreon = https://www.patreon.com/tamberlane/posts
+
 
 [Archive]
 # To use thumbnails in your archives, you must also set "Create thumbnails" to "True"
 # in the [Image Reprocessing] section, or manually create your own
 Use thumbnails = True
-Date format = %m/%d/%Y
+Date format = %d/%m/%Y
 
 [Image Reprocessing]
 Create thumbnails = True
@@ -42,9 +42,9 @@ Image width = 100
 Image height = 36
 
 [Transcripts]
-Enable transcripts = True
+Enable transcripts = False
 Default language = English
 
 [Google Analytics]
 # Example: UA-123456789-0
-Tracking ID = UA-142203229-2
+Tracking ID = 
