Updated home page, style and few comics added

--- a/your_content/comic_info.ini
+++ b/your_content/comic_info.ini
@@ -10,12 +10,12 @@ Use images in navigation bar = False
 Use https when building comic URL = True
 
 [Pages]
-index = Welcome to Inkwell GT!
+index = Добро пожаловать на Inkwell GT!
 latest =
-archive = Archive
-tagged = Tagged Posts
-infinite_scroll = Infinite Scroll
-404 = Page Not Found
+archive = Архив
+tagged = Отмеченные посты
+infinite_scroll = Бесконечный просмотр
+404 = Страница не найдена
 
 [Links Bar]
 Home = /
@@ -36,7 +36,7 @@ Overwrite existing images = False
 
 [RSS Feed]
 Build RSS feed = False
-Language = en-us
+Language = ru-ru
 Image = your_content/images/banner.png
 Image width = 100
 Image height = 36
