--- a/your_content/comics/1/info.ini
+++ b/your_content/comics/1/info.ini
@@ -1,5 +1,5 @@
 Title = Нам нужны инновационные технологии 
-Post date = Август 8, 2020
+Post date = August 8, 2020
 Filename = 1.png
 Alt text =
 Storyline = 
