--- a/your_content/comics/5/info.ini
+++ b/your_content/comics/5/info.ini
@@ -1,5 +1,5 @@
 Title = Понимание требований клиента 
-Post date = Август 25, 2020
+Post date = August 25, 2020
 Filename = 4.png
 Alt text = https://workchronicles.substack.com/p/comic-understanding-client-requirements
 Storyline = 
