--- a/your_content/comics/3/info.ini
+++ b/your_content/comics/3/info.ini
@@ -1,5 +1,5 @@
 Title = Если получилось у них, то у нас тоже получится
-Post date = Август 17, 2020
+Post date = August 17, 2020
 Filename = 3.png
 Alt text =
 Storyline = 
