--- a/your_content/comics/4/info.ini
+++ b/your_content/comics/4/info.ini
@@ -1,5 +1,5 @@
 Title = Когда попросил обратной связи...
-Post date = Август 18, 2020
+Post date = August 18, 2020
 Filename = 4.png
 Alt text =
 Storyline = 
