--- a/your_content/comic_info.ini
+++ b/your_content/comic_info.ini
@@ -18,9 +18,9 @@ infinite_scroll = Бесконечный просмотр
 404 = Страница не найдена
 
 [Links Bar]
-Home = /
-Archive = /archive/
-Infinite Scroll = /infinite_scroll/
+Главная = /
+Архив = /archive/
+Бесконечный просмотр = /infinite_scroll/
 
 
 [Archive]
